--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1692.0",
+    "framer-motion": "^12.6.3",
     "lucide-react": "^0.486.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.55.0",
     "react-image-crop": "^11.0.7",
-    "react-router-dom": "^7.4.1",
+    "react-router-dom": "^7.5.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
